CSWE-359: SpacePlanet - hightlight closest planets (topTime) + vertical alignment correction

--- a/imports/client/ui/blocks/Space/Planet/SpacePlanet.styl
+++ b/imports/client/ui/blocks/Space/Planet/SpacePlanet.styl
@@ -182,10 +182,20 @@
   &_empty
     -webkit-filter grayscale(1)
     filter grayscale(1)
-  
+
+  &_topTime
+    color $cw--color_metal
+
   &_disabled
     // -webkit-filter grayscale(0.5) brightness(0.3)
     // filter grayscale(0.5) brightness(0.3)
         
   &_selected
     background-color #fff2
+
+  &__name
+  &__location
+    display block
+    height 15px
+    text-align center
+    overflow hidden
